# AIVA

./: .gitignore  Cargo.toml  README.md  audio_processor.py  bluetooth_manager.py  config.toml  config.yaml  create_project_struct.py  create_project_struct_2.py  deploy.sh  main.py  power_manager.py  requirements.txt  setup.sh  vision_engine.py  voice_assistant.py
scripts/: camera_worker.py  tts_worker.py  ups_monitor.py
src/: camera_controller.rs  config.rs  main.rs  power_monitor.rs  tts_controller.rs
