[package]
name = "vision_voice_zero_imx500"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["rt", "sync", "time", "process", "io-util", "signal", "rt-multi-thread", "macros"], default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
toml = { version = "0.9.10+spec-1.1.0", default-features = false, features = ["parse"] }
log = "0.4"
env_logger = { version = "0.11", default-features = false }
anyhow = "1.0"
serde_json = { version = "1.0", default-features = false }
# I2C для UPS HAT
i2cdev = "0.6"
byteorder = "1.5"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1